[package]
name = "ad3p2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
panic = 'abort'
lto = true
codegen-units = 1

[dependencies]
memchr = {version = "2.5.0", default-features = false, features = []}
libc = { version = "0.2", default-features = false }

[dev-dependencies]
criterion = "0.4"

[[bench]]
name = "my_benchmark"
harness = false